整合守护进程

--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,7 @@
 TOPDIR=./..
 
 exclude_dirs=xpp pokaftp main
-TARGETDIRS=pokapbrmb 
+
+TARGETDIRS=pokapbrmb pokadaemon
 
 include $(TOPDIR)/cfg/Makefile.mk
