--- a/src/common/makefile
+++ b/src/common/makefile
@@ -4,7 +4,7 @@ LIB=libcommon.a
 
 INCPATH=$(TOPDIR)/include/
 LIBPATH=$(TOPDIR)/lib
-CFLAGS= -I$(INCPATH)
+CFLAGS+= -I$(INCPATH) $(IN_DB)
 
 LDFLAGS= -lpthread  -lrt -lpokalog
 
