--- a/src/db/mysql/makefile
+++ b/src/db/mysql/makefile
@@ -4,6 +4,5 @@ LIB=libdbmysql.a
 
 INCPATH=$(TOPDIR)/include/
 LIBPATH=$(TOPDIR)/lib
-CFLAGS= -I$(INCPATH) -l
-include $(TOPDIR)/cfg/Makefile.db
+CFLAGS+= -I$(INCPATH) $(IN_DB)
 include $(TOPDIR)/cfg/Makefile.mk
