--- a/src/pokadaemon/makefile
+++ b/src/pokadaemon/makefile
@@ -6,6 +6,6 @@ LIBPATH=$(TOPDIR)/lib
 EXEPATH=$(TOPDIR)/bin
 
 CFLAGS= -g  -I$(TOPDIR)/include/ 
-LDFLAGS= -L$(TOPDIR)/lib -lpokalog -lcommon -lpthread -lrt
+LDFLAGS+= -L$(TOPDIR)/lib -lpokalog -lcommon -lpthread -lrt
 
 include $(TOPDIR)/cfg/Makefile.mk
