--- a/src/pokaftp/makefile
+++ b/src/pokaftp/makefile
@@ -7,7 +7,7 @@ exclude_files=testftp.c
 
 INCPATH=$(TOPDIR)/include/
 LIBPATH=$(TOPDIR)/lib
-CFLAGS= -I$(INCPATH)
+CFLAGS+= -I$(INCPATH)
 
 #LDFLAGS= -L$(TOPDIR)/lib
 
