--- a/src/pokapbrmb/makefile
+++ b/src/pokapbrmb/makefile
@@ -5,10 +5,10 @@ TARGET=pokapbrmb
 LIBPATH=$(TOPDIR)/lib
 EXEPATH=$(TOPDIR)/bin
 
-MYSQLLIB= -ldbmysql -lmysqlclient_r
+#MYSQLLIB = -ldbmysql -lmysqlclient_r
 
-CFLAGS= -g  -I$(TOPDIR)/include/ 
-LDFLAGS= -L$(TOPDIR)/lib -lpokalog -lcommon   -lpokafile -lpthread -lrt  -ldl  -lm  $(MYSQLLIB)
+CFLAGS+= -g  -I$(TOPDIR)/include/  $(IN_DB)
+LDFLAGS= -L$(TOPDIR)/lib -lpokalog -lcommon   -lpokafile -lpthread -lrt  $(LID_DB)
 
 include $(TOPDIR)/cfg/Makefile.db
 include $(TOPDIR)/cfg/Makefile.mk
