--- a/src/pokalog/makefile
+++ b/src/pokalog/makefile
@@ -4,6 +4,6 @@ LIB=libpokalog.a
 
 INCPATH=$(TOPDIR)/include/
 LIBPATH=$(TOPDIR)/lib
-CFLAGS= -I$(INCPATH)
+CFLAGS+= -I$(INCPATH)
 
 include $(TOPDIR)/cfg/Makefile.mk
