完善商行oracle版本 修改ftp脚本，添加主被动模式参数

--- a/src/pokapbrmb/makefile
+++ b/src/pokapbrmb/makefile
@@ -8,7 +8,7 @@ EXEPATH=$(TOPDIR)/bin
 #MYSQLLIB = -ldbmysql -lmysqlclient_r
 
 CFLAGS+= -g  -I$(TOPDIR)/include/  $(IN_DB)
-LDFLAGS= -L$(TOPDIR)/lib -lpokalog -lcommon   -lpokafile -lpthread -lrt  $(LID_DB)
+LDFLAGS+= -L$(TOPDIR)/lib  -lpokalog    -lpokafile -lpthread -lrt  -lcommon $(LID_DB)
 
-include $(TOPDIR)/cfg/Makefile.db
+#include $(TOPDIR)/cfg/Makefile.db
 include $(TOPDIR)/cfg/Makefile.mk
