1.添加黑名单功能 2.修复mysql初始化脚本bug 3.添加doc目录，存放项目文档

--- a/cfg/pkrmb.ini
+++ b/cfg/pkrmb.ini
@@ -1,6 +1,12 @@
-dbuser=poka
+;dbuser=poka
+;dbpassword=123456
+;dbservicename=or112
+
+
+dbuser=root
 dbpassword=123456
-dbservicename=or112
+dbservicename=PokaRmbCB
+dbip=localhost
 
 opentransform=1
 
