添加刷卡信息入库

--- a/cfg/pkrmb.ini
+++ b/cfg/pkrmb.ini
@@ -1,12 +1,12 @@
-;dbuser=poka
-;dbpassword=123456
-;dbservicename=or112
-
-
-dbuser=root
+dbuser=poka
 dbpassword=123456
-dbservicename=PokaRmbCB
-dbip=localhost
+dbservicename=or112
+
+
+;dbuser=root
+;dbpassword=123456
+;dbservicename=PokaRmbCB
+;dbip=localhost
 
 opentransform=1
 
