1.新增pokaftp程序，用于ftp前置机 2.修改部分shell脚本

--- a/src/common/makefile
+++ b/src/common/makefile
@@ -2,11 +2,15 @@ TOPDIR=./../..
 
 LIB=libcommon.a
 
+
+ifeq ($(DBTYPE),NO_DB)
+exclude_files= datecut.c monrule.c
+endif
 INCPATH=$(TOPDIR)/include/
 LIBPATH=$(TOPDIR)/lib
 CFLAGS+= -I$(INCPATH) $(IN_DB)
 
-LDFLAGS= -lpthread  -lrt -lpokalog
+LDFLAGS= -lpthread  -lrt -lpokalog -lm
 
 
 include $(TOPDIR)/cfg/Makefile.mk
