--- a/src/db/makefile
+++ b/src/db/makefile
@@ -3,17 +3,20 @@ TOPDIR=./../..
 
 ifeq ($(DBTYPE),DB_MYSQL)
 exclude_dirs= oracle
-$(warning  exclude_dirs :$(exclude_dirs))
-else
-$(warning  exclude_dirs :$(exclude_dirs))
+else 
+	ifeq ($(DBTYPE),DB_ORACLE)
+	exclude_dirs= mysql
+	else
+		exclude_dirs= mysql oracle
+	endif
 endif 
 
-ifeq ($(DBTYPE),DB_ORACLE)
-exclude_dirs= mysql
-$(warning  exclude_dirs :$(exclude_dirs))
-else
-$(warning  exclude_dirs :$(exclude_dirs))
-endif
+#ifeq ($(DBTYPE),DB_ORACLE)
+#exclude_dirs= mysql
+#$(warning  exclude_dirs :$(exclude_dirs))
+#else
+#$(warning  exclude_dirs :$(exclude_dirs))
+#endif
 
 export exclude_dirs
 
