商行仅上传交款调拨数据

--- a/cfg/route.ini
+++ b/cfg/route.ini
@@ -12,7 +12,22 @@
 		   "servicecode":"0",
 		   "lastdate":"20160101",
 		   "starttime":"1",
-		   "inter_val":"100",
+		   "inter_val":"10",
 		   "model":"0"
-		}
+		}, {
+                   "targetbank":"0204",
+                   "forwardbank":"0204",
+                   "ipaddr":"192.168.125.112",
+                   "port":"10001",
+                   "user":"poka",
+                   "password":"123456",
+                   "localdir":"/home/poka/hdgjun1/",
+                   "remotedir":"/home/poka/pokapbrmb/",
+                   "type":"0",
+                   "servicecode":"0",
+                   "lastdate":"20160101",
+                   "starttime":"1",
+                   "inter_val":"10",
+                   "model":"0"
+                }
 ]
