--- a/src/pokadaemon/makefile
+++ b/src/pokadaemon/makefile
@@ -2,6 +2,8 @@ TOPDIR=./../..
 
 TARGET=pokadaemon
 
+SUBTARGET=pftpdaemon
+
 LIBPATH=$(TOPDIR)/lib
 EXEPATH=$(TOPDIR)/bin
 
@@ -9,3 +11,5 @@ CFLAGS= -g  -I$(TOPDIR)/include/
 LDFLAGS+= -L$(TOPDIR)/lib -lpokalog -lcommon -lpthread -lrt
 
 include $(TOPDIR)/cfg/Makefile.mk
+
+
