--- a/src/db/makefile
+++ b/src/db/makefile
@@ -2,12 +2,16 @@ TOPDIR=./../..
 
 
 ifeq ($(DBTYPE),DB_MYSQL)
-exclude_dirs= oracle
+exclude_dirs= oracle db2
 else 
 	ifeq ($(DBTYPE),DB_ORACLE)
-	exclude_dirs= mysql
+	exclude_dirs= mysql db2
 	else
+		ifeq ($(DBTYPE),DB_DB2)
 		exclude_dirs= mysql oracle
+		else
+		exclude_dirs= mysql oracle db2
+		endif
 	endif
 endif 
 
